@@ -140,7 +140,7 @@ $strCheckTable = 'Verificar a tabela';
 $strChoosePage = 'Escolla unha páxina para modificar';
 $strColComFeat = 'Mostrando os comentarios das columnas';
 $strCollation = 'Orde alfabética';
-$strColumnNames = 'Nomes das Columnas';
+$strColumnNames = 'Nomes das columnas';
 $strColumnPrivileges = 'Privilexios proprios de columna';
 $strCommand = 'Comando';
 $strComment = 'Comentario';
@@ -159,7 +159,7 @@ $strConstraintsForTable = 'Limitacións para a tabela';
 $strControluserFailed = 'Fallou a conexión para controluser tal e como se define na súa configuración.';
 $strCookiesRequired = 'A partir de aqui debe permitir cookies.';
 $strCopy = 'Copiar';
-$strCopyDatabaseOK = 'A base de dastos %s copiouse para %s';
+$strCopyDatabaseOK = 'Copiuse a base de datos %s para %s';
 $strCopyTable = 'Copiar a tabela a (base_de_datos<b>.</b>tabela):';
 $strCopyTableOK = 'A tabela \$table copiouse para \$new_name.';
 $strCopyTableSameNames = 'Non se pode copiar unha tabela sobre si mesma';
@@ -1459,115 +1459,116 @@ $strReplicationStatus = 'Estado da replicación';
 $strReplicationStatusInfo = 'Este servidor de MySQL server funciona como %s en proceso de <b>replicación</b>. Para máis información acerca do estado de replicación do servidor visite a <a href="#replication">sección sobre replicación</a>.';
 $strReplicationStatus_master = 'Estado do mestre';
 $strReplicationStatus_slave = 'Estado do escravo';
-$strNavTableFilter = 'Filter';  //to translate
-$strPhpArray = 'PHP array';  //to translate
-$strImportLargeFileUploading = 'The file being uploaded is probably larger than the maximum allowed size or this is a known bug in webkit based (Safari, Google Chrome, Arora etc.) browsers.';  //to translate
-$strImportProceedingFile = 'The file is being processed, please be patient.';  //to translate
-$strImportUploadInfoNotAvailable = 'Please be patient, the file is being uploaded. Details about the upload are not available.';  //to translate
-$strImportNoticePt1 = 'The following structures have either been created or altered. Here you can:';  //to translate
-$strImportNoticePt3 = 'Change any of its settings by clicking the corresponding "Options" link';  //to translate
-$strGoToDatabase = 'Go to database';  //to translate
-$strGoToTable = 'Go to table';  //to translate
-$strGoToView = 'Go to view';  //to translate
-$strStructureLC = 'structure';  //to translate
-$strSettings = 'settings';  //to translate
-$strImportODS = 'Open Document Spreadsheet';  //to translate
-$strImportColNames = 'Column names in first row';  //to translate
-$strImportEmptyRows = 'Do not import empty rows';  //to translate
-$strImportODSPercents = 'Import percentages as proper decimals (12.00% to .12)';  //to translate
-$strImportODSCurrency = 'Import currencies ($5.00 to 5.00)';  //to translate
-$strImportXLS = 'Excel 97-2003 XLS Workbook';  //to translate
-$strImportNoticePt2 = 'View a structure`s contents by clicking on its name';  //to translate
-$strImportNoticePt4 = 'Edit its structure by following the "Structure" link';  //to translate
-$strImportXLSX = 'Excel 2007 XLSX Workbook';  //to translate
-$strXMLError = 'The XML file specified was either malformed or incomplete. Please correct the issue and try again.';  //to translate
-$strXMLExportContents = 'Export contents';  //to translate
-$strXMLExportFunctions = 'Export functions';  //to translate
-$strXMLExportProcedures = 'Export procedures';  //to translate
-$strXMLExportStructs = 'Export Structure Schemas (recommended)';  //to translate
-$strXMLExportTables = 'Export tables';  //to translate
-$strXMLExportTriggers = 'Export triggers';  //to translate
-$strXMLExportViews = 'Export views';  //to translate
-$strTracking = 'Tracking';  //to translate
-$strTrackingActivateTrackingFor = 'Activate tracking for %s.%s';  //to translate
-$strTrackingActivated = 'Tracking of %s.%s is activated.';  //to translate
-$strTrackingActivateNow = 'Activate now';  //to translate
-$strTrackingCreateVersion = 'Create version';  //to translate
-$strTrackingCreateVersionOf = 'Create version %s of %s.%s';  //to translate
-$strTrackingDataDefinitionStatement = 'Data definition statement';  //to translate
-$strTrackingDataManipulationStatement = 'Data manipulation statement';  //to translate
-$strTrackingDate = 'Date';  //to translate
-$strTrackingDeactivateNow = 'Deactivate now';  //to translate
-$strTrackingDeactivateTrackingFor = 'Deactivate tracking for %s.%s';  //to translate
-$strTrackingDoIt = 'Do it';  //to translate
-$strTrackingExportAs = 'Export as %s';  //to translate
-$strTrackingIsActive = 'Tracking is active.';  //to translate
-$strTrackingIsDeactive = 'Tracking is deactive.';  //to translate
-$strTrackingMechanism = 'Tracking Mechanism';  //to translate
-$strTrackingReport = 'Tracking report';  //to translate
-$strTrackingReportClose = 'Close';  //to translate
-$strTrackingSelectStructureAndData = 'Structure and Data';  //to translate
-$strTrackingSelectDataOnly = 'Data only';  //to translate
-$strTrackingSelectStructureOnly = 'Structure only';  //to translate
-$strTrackingShowLogDateUsers = 'Show %s with dates from %s to %s by user %s %s';  //to translate
-$strTrackingShowVersions = 'Show versions';  //to translate
-$strTrackingSQLDump = 'SQL dump';  //to translate
-$strTrackingSQLDumpFile = 'SQL dump (file download)';  //to translate
-$strTrackingSQLExecution = 'SQL execution';  //to translate
-$strTrackingSQLExecutionAlert = 'This option will replace your table and contained data.';  //to translate
-$strTrackingSQLExecuted = 'SQL statements executed.';  //to translate
-$strTrackingSQLExported = 'SQL statements exported. Please copy the dump or execute it.';  //to translate
-$strTrackingStatements = 'Tracking statements';  //to translate
-$strTrackingStatusActive = 'active';  //to translate
-$strTrackingStatusDeactive = 'deactive';  //to translate
-$strTrackingStructureSnapshot = 'Structure snapshot';  //to translate
-$strTrackingThDatabase = 'Database';  //to translate
-$strTrackingThTable = 'Table';  //to translate
-$strTrackingThLastVersion = 'Last version';  //to translate
-$strTrackingThVersion = 'Version';  //to translate
-$strTrackingThCreated = 'Created';  //to translate
-$strTrackingThUpdated = 'Updated';  //to translate
-$strTrackingThStatus = 'Status';  //to translate
-$strTrackingThShow = 'Show';  //to translate
-$strTrackingTrackDDStatements = 'Track these data definition statements:';  //to translate
-$strTrackingTrackDMStatements = 'Track these data manipulation statements:';  //to translate
-$strTrackingTrackTable = 'Track table';  //to translate
-$strTrackingTrackedTables = 'Tracked tables';  //to translate
-$strTrackingUntrackedTables = 'Untracked tables';  //to translate
-$strTrackingUsername = 'Username';  //to translate
-$strTrackingVersions = 'Versions';  //to translate
-$strTrackingVersionCreated = 'Version %s is created, tracking for %s.%s is activated.';  //to translate
-$strTrackingVersionActivated = 'Tracking for %s.%s , version %s is activated.';  //to translate
-$strTrackingVersionDeactivated = 'Tracking for %s.%s , version %s is deactivated.';  //to translate
-$strTrackingVersionSnapshotSQL = 'Version %s snapshot (SQL code)';  //to translate
-$strTrackingDatabaseLog = 'Database Log';  //to translate
-$strSynchronize = 'Synchronize';  //to translate
-$strSynchronizationNote='Target database will be completely synchronized with source database. Source database will remain unchanged.';  //to translate
-$strSynchronizeDb= 'Synchronize Databases';  //to translate
-$strApplyChanges='Apply Selected Changes';  //to translate
-$strStructureSyn = 'Structure Synchronization';  //to translate
-$strDataSyn = 'Data Synchronization';  //to translate
-$strStructureDiff = 'Structure Difference' ;  //to translate
-$strDataDiff = 'Data Difference';  //to translate
-$strTableCreate = 'Create Table';  //to translate
-$strTableAddColumn = 'Add Column(s)';  //to translate
-$strTableRemoveColumn = 'Remove Column(s)';  //to translate
-$strTableAlterColumn = 'Alter Column(s)';  //to translate
-$strTableRemoveIndex = 'Remove Index(s)';  //to translate
-$strTableAlterIndex = 'Alter Index(s)';  //to translate
-$strTableApplyIndex = 'Apply Index(s)';  //to translate
-$strTableUpdateRow = 'Update Row(s)';  //to translate
-$strTableInsertRow = 'Insert Row(s)';  //to translate
-$strTableDeleteRows = 'Would you like to delete all the previous rows from target tables?';  //to translate
-$strPort = 'Port';  //to translate
-$strSocket = 'Socket';  //to translate
-$strCouldNotConnectSource = 'Could not connect to the source';  //to translate
-$strCouldNotConnectTarget = 'Could not connect to the target';  //to translate
-$strDatabaseNotExisting = '\'%s\' database does not exist.';  //to translate 
-$strDatabase_src = 'Source Database';  //to translate
-$strDatabase_trg = 'Target Database';  //to translate
-$strRemoteServer = 'Remote Server';  //to translate
-$strCurrentServer = 'Current Server';  //to translate
+$strNavTableFilter = 'Filtro';
+$strPhpArray = 'Array de PHP';
+$strImportLargeFileUploading = 'O ficheiro que se vai enviar é, posibelmente, maior do que o tamaño máximo permitido ou este é un erro coñecido no dos navegadores baseados en webkit (Safari, Google Chrome, Arora etc.).';
+$strImportProceedingFile = 'Estase a procesar o ficheiro; teña paciencia, por favor.';
+$strImportUploadInfoNotAvailable = 'Teña paciencia, estase a enviar o ficheiro. Os detalles sobre o envío non están disponíbeis.';
+$strImportNoticePt1 = 'As estruturas seguintes foron creadas ou alteradas. Aquí pode:';
+$strImportNoticePt3 = 'Mude calquera destas opcións premendo a ligazón "Opcións" correspondente';
+$strGoToDatabase = 'Ir á base de datos';
+$strGoToTable = 'Ir á táboa';
+$strGoToView = 'Ir á vista';
+$strStructureLC = 'estructure';
+$strSettings = 'opcións';
+$strImportODS = 'Folla de cálculo Open Document';
+$strImportColNames = 'Nomes das columnas na primeira fileira';
+$strImportEmptyRows = 'Non importar as fileiras baleiras';
+$strImportODSPercents = 'Importar as porcentaxes como decimais correctos (12.00% a .12)';
+$strImportODSCurrency = 'Importar as moedas ($5.00 a 5.00)';
+$strImportXLS = 'Libro de traballo XLS do Excel 97-2003';
+$strImportNoticePt2 = 'Ver o contido dunha estrutura premendo o seu nome';
+$strImportNoticePt4 = 'Modificar a súa estrutura seguindo a ligazón "Estrutura"';
+$strImportXLSX = 'Libro de traballo XLSX do Excel 2007';
+$strXMLError = 'O ficheiro XML especificado estaba estragado ou incompleto. Corrixa o problema e ténteo de novo.';
+$strXMLExportContents = 'Exportar o contido';
+$strXMLExportFunctions = 'Exportar as funcións';
+$strXMLExportProcedures = 'Exportar os procedementos';
+$strXMLExportStructs = 'Exportar os Esquemas de Estrutura (recomendado)';
+$strXMLExportTables = 'Exportar as táboas';
+$strXMLExportTriggers = 'Exportar os disparadores';
+$strXMLExportViews = 'Exportar as vistas';
+$strTracking = 'Seguimento';
+$strTrackingActivateTrackingFor = 'Activar o seguimento de %s.%s';
+$strTrackingActivated = 'Activouse o seguimento de %s.%s.';
+$strTrackingActivateNow = 'Activar agora';
+$strTrackingCreateVersion = 'Crear unha versión';
+$strTrackingCreateVersionOf = 'Crear a versión %s de %s.%s';
+$strTrackingDataDefinitionStatement = 'Declaración de definición de datos';
+$strTrackingDataManipulationStatement = 'Declaración de manipulación de datos';
+$strTrackingDate = 'Data';
+$strTrackingDeactivateNow = 'Desactivar agora';
+$strTrackingDeactivateTrackingFor = 'Desactivar o seguimento de %s.%s';
+$strTrackingDoIt = 'Facelo';
+$strTrackingExportAs = 'Exportar como %s';
+$strTrackingIsActive = 'O seguimento está activado.';
+$strTrackingIsDeactive = 'O seguimento está desactivado.';
+$strTrackingMechanism = 'Mecanismo de seguimento';
+$strTrackingReport = 'Informe de seguimento';
+$strTrackingReportClose = 'Fechar';
+$strTrackingSelectStructureAndData = 'Estrutura e datos';
+$strTrackingSelectDataOnly = 'Só os datos';
+$strTrackingSelectStructureOnly = 'Só a estrutura';
+$strTrackingShowLogDateUsers = 'Mostrar %s con datas de %s a %s polo usuario %s %s';
+$strTrackingShowVersions = 'Mostrar as versións';
+$strTrackingSQLDump = 'Volcado de SQL';
+$strTrackingSQLDumpFile = 'Volcado de SQL (descarga do ficheiro)';
+$strTrackingSQLExecution = 'Execución de SQL';
+$strTrackingSQLExecutionAlert = 'Esta opción substitúe a táboa e os datos que contén.';
+$strTrackingSQLExecuted = 'Declaracións SQL executadas.';
+$strTrackingSQLExported = 'Declaracións SQL exportadas. Copie o volcado ou execúteo.';
+$strTrackingStatements = 'Declaracións de seguimento';
+$strTrackingStatusActive = 'activado';
+$strTrackingStatusDeactive = 'deactivado';
+$strTrackingStructureSnapshot = 'Instantánea da estrutura';
+$strTrackingThDatabase = 'Base de datos';
+$strTrackingThTable = 'Táboa';
+$strTrackingThLastVersion = 'Última versión';
+$strTrackingThVersion = 'Versión';
+$strTrackingThCreated = 'Creada';
+$strTrackingThUpdated = 'Actualizada';
+$strTrackingThStatus = 'Estado';
+$strTrackingThShow = 'Mostrar';
+$strTrackingTrackDDStatements = 'Seguir estas declaracións de definición de datos:';
+$strTrackingTrackDMStatements = 'Seguir estas declaracións de manipulación de datos:';
+$strTrackingTrackTable = 'Seguir a táboa';
+$strTrackingTrackedTables = 'Táboas seguidas';
+$strTrackingUntrackedTables = 'Táboas non seguidas';
+$strTrackingUsername = 'Nome de usuario';
+$strTrackingVersions = 'Versións';
+$strTrackingVersionCreated = 'Creouse a versión %s; activouse o seguimento de %s.%s.';
+$strTrackingVersionActivated = 'Activouse o seguimento de %s.%s , versión %s.';
+$strTrackingVersionDeactivated = 'Desactivouse o seguimento de %s.%s , versión %s.';
+$strTrackingVersionSnapshotSQL = 'Instantánea da versión %s snapshot (código SQL)';
+$strTrackingDatabaseLog = 'Rexistro de actividade da base de datos';
+$strSynchronize = 'Sincronizar';
+$strSynchronizationNote='A base de datos de destino sincronizarase completamente coa base de datos de orixe. A base de datos de orixe ficará sen alteracións.';
+$strSynchronizeDb= 'Sincronizar as bases de datos';
+$strApplyChanges='Aplicar as alteracións seleccionadas';
+$strStructureSyn = 'Sincronización da estrutura';
+$strDataSyn = 'Sincronización dos datos';
+$strStructureDiff = 'Diferenza da estrutura' ;
+$strDataDiff = 'Diferenza dos datos';
+$strTableCreate = 'Crear táboa';
+$strTableAddColumn = 'Engadir columna(s)';
+$strTableRemoveColumn = 'Eliminar columna(s)';
+$strTableAlterColumn = 'Alterar column(s)';
+$strTableRemoveIndex = 'Eliminar índice(s)';
+$strTableAlterIndex = 'Alterar índice(s)';
+$strTableApplyIndex = 'Aplicar índice(s)';
+$strTableUpdateRow = 'Actualizar fileira(s)';
+$strTableInsertRow = 'Inserir fileira(s)';
+$strTableDeleteRows = 'Quere eliminar todas as fileiras anteriores das táboas de destino?';
+$strPort = 'Porto';
+$strSocket = 'Socket';
+$strCouldNotConnectSource = 'Non foi posíbel conectar coa orixe';
+$strCouldNotConnectTarget = 'Non foi posíbel conectar co destino';
+$strDatabaseNotExisting = 'Non existe a base de datos \'%s\'.'; 
+$strDatabase_src = 'Base de datos de orixe';
+$strDatabase_trg = 'Base de datos de destino';
+$strRemoteServer = 'Servidor remoto';
+$strCurrentServer = 'Servidor actual';
+
 $strReplicationSelectDatabases = 'Please select databases:';  //to translate
 $strReplicationSynchronize = 'Synchronize databases with master';  //to translate
 $strReplicationAddLines = 'Now, add following lines at the end of your my.cnf and please restart the mysql server afterwards.';  //to translate
